--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -3,7 +3,7 @@ server.port=8008
 
 
 #HIBERNATE-JPA and DB Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/coffeeshop_development_db?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/coffeeshop_development_db
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.tomcat.max-wait=20000
@@ -15,7 +15,7 @@ spring.datasource.continue-on-error=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create-drop
 
 logging.level.root=INFO
 logging.level.org.hibernate.SQL=DEBUG
