--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -3,9 +3,9 @@ server.port=8008
 
 
 #HIBERNATE-JPA and DB Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/vouch_development?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/coffeeshop_development_db?characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
