--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -3,9 +3,9 @@ server.port=8008
 
 
 #HIBERNATE-JPA and DB Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/vouch_development?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/coffeeshop_development_db?characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
@@ -17,7 +17,6 @@ spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.hibernate.ddl-auto= update
 
-#LOGGING CONFIG
 logging.level.root=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
@@ -25,5 +24,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #spring security configurations
 security.basic.enabled=false
 
-#spring whitelabel error config
 server.error.whitelabel.enabled=true
