--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -15,7 +15,7 @@ spring.datasource.continue-on-error=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= update
 
 logging.level.root=INFO
 logging.level.org.hibernate.SQL=DEBUG
@@ -25,3 +25,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 security.basic.enabled=false
 
 server.error.whitelabel.enabled=true
+
+#JWT CONFIG
+jwt.secret.key=s3cre7
