--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -25,3 +25,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 security.basic.enabled=false
 
 server.error.whitelabel.enabled=true
+
+#JWT CONFIG
+jwt.secret.key=s3cre7
